--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" type="text/css" />
-    <title>TerraceTechフロントエンドエンジニア養成所</title>
-  </head>
-  <body>
-    <div>ここに何かを書く</div>
-  </body>
-</html>
+  <title>
+    hola
+  <title>
+  <head>
+<body>
+
+  <h1>Isabella</h1>
+
+  <h2>Ortiz</h2>
+
+  <h3>sanchez</h3>
+
+  <h4> love u </h4>
+
+  <h5> informatica </h5>
+
+  <h6> grado 10b </h6>
