Imagenes con descripción

--- a/index.html
+++ b/index.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
-
 <html>
-   <head>
-     <link rel="stylesheet" href="style.css" />
-     <meta charset="UTF-8" />
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
 
+    <title>
+      tarea3
+    </title>
+  </head>
 
-     <title>
-       tarea 3 
-     </title>
-    </head>
+  <body>
+    <h1>LAS FRESAS</h1>
+    <img src="imagenes/fresas.jpg" width="400" height="200" />
+    <br>
+  </br>
+    <h2>
+    La fresa es una fruta de forma cónica o casi redonda,de color rojo y con
+      un sabor que varía de ácido a muy dulce. Lo que más caracteriza a esta
+      fruta es su intenso aroma.
+    </h2>
+    <h3>LAS ESTRELLAS</h1>
+    <img src="imagenes/estrella.jpg" width="400" height="400" />
+    <br>
+  </br>
+    <h2>
+   Una estrella es una esfera de gas caliete
+   que brilla intensamente cuya energía es
+   producida por un proceso interno de fusión
+   nuclear.
+    </h2>
+    <h5>EL ARCOIRIS</h1>
+      <img src="imagenes/arcoiris.jpg" width="400" height="300" />
+      <br>
+    </br>
+      <h2>
+    Un arcoiris es una banda luminosa con forma de arco que presenta
+    los colores del espectro solar y aparece a veces en el cielo,
+    debido a la refracción y reflexión de la luz del sol en las gotas de 
+    lluvia.
+  </h2>
       
-    </body>
-      <img src="imagenes/estrella.jpg" width="200" height"200"
+    
+
+
+
+
+
+
+
   </body>
 </html>
