TRABAJO FINALIZADO IMAGENES . IMAGENES DE ESTRELLA,FRUTA Y ARCOIRIS.

--- a/index.html
+++ b/index.html
@@ -11,42 +11,34 @@
 
   <body>
     <h1>LAS FRESAS</h1>
-    <img src="imagenes/fresas.jpg" width="400" height="200" />
+    <img id= "straw" src="imagenes/fresas.jpg" width="400" height="200" />
     <br>
   </br>
-    <h2>
+    <p>
     La fresa es una fruta de forma cónica o casi redonda,de color rojo y con
       un sabor que varía de ácido a muy dulce. Lo que más caracteriza a esta
       fruta es su intenso aroma.
-    </h2>
+    </p>
     <h3>LAS ESTRELLAS</h1>
-    <img src="imagenes/estrella.jpg" width="400" height="400" />
+    <img id="star" src="imagenes/estrella.jpg" width="400" height="400" />
     <br>
   </br>
-    <h2>
+    <p>
    Una estrella es una esfera de gas caliete
    que brilla intensamente cuya energía es
    producida por un proceso interno de fusión
    nuclear.
-    </h2>
+    </p>
     <h5>EL ARCOIRIS</h1>
-      <img src="imagenes/arcoiris.jpg" width="400" height="300" />
+      <img id= "rainbow" src="imagenes/arcoiris.jpg" width="400" height="300" />
       <br>
     </br>
-      <h2>
+      <p>
     Un arcoiris es una banda luminosa con forma de arco que presenta
     los colores del espectro solar y aparece a veces en el cielo,
     debido a la refracción y reflexión de la luz del sol en las gotas de 
     lluvia.
-  </h2>
+      </p>
       
-    
-
-
-
-
-
-
-
   </body>
 </html>
