--- a/index.html
+++ b/index.html
@@ -1,118 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <meta charset="UTF-8" />
-
-    <title>
-      Galería De Imágenes
-    </title>
+    <title>Evaluación acumulativa</title>
   </head>
 
+  <header>
+    <h1>= MI FUTURO =</h1>
+  </header>
   <body>
-    <h1>GALERÍA DE IMÁGENES</h1>
-    <h2>    =GLACITAS=</h2>
-    <img id= "glasas" src="imagenes/glacitass.jpg" width="300" height="250" />
-    <br>
-  </br>
+    <h3>=¿Qué planeo hacer después de graduarme?=</h3>
     <p>
-      Glacitas es una galleta de origen peruano que se vende en Colombia desde hace más
-     de cinco años. El producto se ha distinguido por generar recordación en los consumidores
-     con la producción de comerciales, contenidos interactivos y videojuegos en la
-      página web , tras el uso de las 'rayas' como el elemento fundamental de recordación.
-      <br>
-      <br>
-      Elejí esta imágen porque estas galletas me fascinan desde chiquita, y siempre que las veo trato 
-      de conseguirlas, porque el sabor que a mi me gusta es un poco escaso.
-      <br>
-      <br>
-    Esta imagen tien el filtro llamado "Brightness". El cuál le dá a la imágen una apriencia más 
-    brillante o más oscura dependiendo del número que se le aplique (Un número con mayor porcentaje,
-    tiende a tener más luminosidad; Mientras que un porcentaje bajo tiende a tener más oscuridad.) 
-
+      Al graduarme del colegio lo primero que haría sería festejar este logro
+      con mi familia, ya que nada de esto podría suceder sin su apoyo
+      incondicional, sus enseñanzas y acompañamientos. Posteriormente me
+      gustaría celebrarlo con mis amigas y compañeros.
+      <br />
+      <br />
+      Entrando al tema de que quiero estudiar, primero me gustaría reforzar mi
+      inglés en otro país como Canadá o Estados Unidos. Pero el tema de
+      universidad es algo que me tiene aún un poco confundida. Ya que para mi es
+      algo que me debería gustar por completo y algo de lo cual no me arrepieta
+      en algún momento.
+      <br />
+      <br />
+      Pero pensaría en escojer entre ingeniería administrativa y enfocarme en la
+      parte de diseño o mercadeo (aun nose en que universidad).
+      <br />
+      <br />
+      Pero sea la carrera que sea simpre trataría de ayudar en alguna forma a
+      las personas que de verdad lo necesitan, ya que es algo que me fascina
+      hacer y poder de alguna forma contribuirle al mundo.
+      <br />
+      <br />
+      <br />
+      <img id="trabajo" src="imagenes/marke.jpg" width="300" height="250" />
+      <br />
+      <br />
     </p>
-
-    <h2>   =NUCITA=</h2>
-    <img id="choclat" src="imagenes/nucita.jpg" width="300" height="400" />
-    <br>
-  </br>
-    <p>
-      La Nucita es uno de los dulces más preciados en Venezuela y
-     Colombia. Se trata de una crema doble de chocolate con 
-     avellana y leche, que, gracias a su principal materia prima:
-   cacao al 100%, se ha ganado el corazón de millones de
-    personas, en los que se destacan niños y jóvenes.
-    <br>
-    <br>
-     Elejí esta imágen porque casi todo lo que tenga que ver con chocolate me encanta. Y la 
-     mayoría de dulces que escojí es porque desde hace años me vienen gustando. La nucita me gusta 
-     porque es la combinación de chocolate y su sabor es muy rico.
-     <br>
-     <br>
-     El filtro que usé fue "opacity"; El cuál define la transparencia de una imágen, este medidmo en porcentajes,
-     siendo 0 una imágen completamente transparente.
-    </p>
-
-    <h2>   =TRAGANOTAS=</h2>
-      <img id= "papelito" src="imagenes/traganotas.jpg" width="400" height="320" />
-      <br>
-    </br>
-      <p>
-        Este dulce consiste en un papel comestible a base de oblea con
-       alguna actividad impresa como sopa de letras o triki , el cual
-       se soluciona con un lápiz de caramelo.
-       <br>
-       Esta imágen la escoji, porque este dulce es muy rico y me acuerda cuando iba a visitar
-       a unos familiares de mi papá, ya que al frente hay una dulcería y siempre iba a comprar 
-       uno de estos. También porque hubo una época donde quise probar todos los producto de esa marca
-       y la verdad todos me parecieron super deliciosos.
-       <br>
-       El filtro que use acá fue "Drop Shadow", el cuál es una función que nos permite agregar una sombra 
-       difuminada al contorno o borde de un texto o una imagen.
-      </p>
-
-      <h2>  =FUN DIP=</h2>
-      <img id= "verde" src="imagenes/fundip.jpg" width="300" height="300" />
-      <br>
-    </br>
-      <p>
-        El Fun Dip es un dulce súper delicioso, el cual viene de varios sabores: 
-        manzana y cereza. Este cuenta con un bastoncito de caramelo que
-        sirve para probar el rico polvo de manzana verde que tiene.
-        <br>
-        <br>
-        Elejí el filtro "Hue-Rotate" , este define la rotación del color medida en grados; es decir nos permite variar el tono del elemento sobre
-        el círculo cromático. 
-      </p>
-      
-      <h2>   =HERSHEY'S=</h2>
-      <img id= "blanc" src="imagenes/hersheys.jpg" width="250" height="200" />
-      <br>
-    </br>
-      <p>
-      The Hershey Company, antiguamente Hershey Foods Corporation, comúnmente referida como Hershey's,
-     es la compañía fabricante de chocolates más grande de Estados Unidos y de las más reconocidas mundialmente.
-    </br>
-      Usé el filtro llamado "Blur", el cuál desenfoca la imégen.
-      </p>
-
-      <h2>   =BON BON BUM=</h2>
-      <img id= "sabor" src="imagenes/bombom.jpg" width="300" height="210" />
-      <br>
-    </br>
-      <p>
-        BON BON BUM  es y fue un producto exitoso por su innovación en Colombia,
-       al ser un caramelo relleno de chicle y además con su inconfundible sabor. Desde ese
-       momento se convirtió en el producto estrella de la empresa COLOMBINA .
-      </br>
-       Usé el filtro llamado "Saturate", el cuál controla a intensidad de la imágen.
-      </p>
-
-
-
-      
   </body>
+
+  <footer>
+    -Isabella Ortiz Sánchez.
+    <br />
+    <br />
+    - isabella.ortizsanchez@bethlemitasbello.edu.co
+    <br />
+    <br />
+    - 15 años.
+    <br />
+    <br />
+    - Amo integrarme con gente nueva, hacer cosas didácticas y ayudar a las
+    demás personas.
+    <br />
+    <a href="mailto:isabella.ortizsanchez@bethlemitasbello.edu.co">email</a>
+  </footer>
 </html>
-
-
-
