--- a/index.html
+++ b/index.html
@@ -9,57 +9,31 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Evaluación acumulativa</title>
+    <title>Imágenes.</title>
   </head>
-
-  <header>
-    <h1>= MI FUTURO =</h1>
-  </header>
   <body>
-    <h3>=¿Qué planeo hacer después de graduarme?=</h3>
+    <h1>=LA NATACIÓN=</h1>
+    <img id="nadis" src="imagenes/nadis.jpg" width="400" height="200" />
+    <br />
+    <br />
+    <map name="image-map">
+      <area
+        title="#pagina principal"
+        href="https://concepto.de/natacion/"
+        coords="14,14,55,37"
+        shape="rect"
+      />
+      <area
+        title="#ramas"
+        href="https://todonatacion.net/ramas-de-la-natacion/"
+        coords="14,14,55,37"
+        shape="circle"
+      />
+    </map>
+
+    <h2>Historia de Barcelona</h2>
     <p>
-      Al graduarme del colegio lo primero que haría sería festejar este logro
-      con mi familia, ya que nada de esto podría suceder sin su apoyo
-      incondicional, sus enseñanzas y acompañamientos. Posteriormente me
-      gustaría celebrarlo con mis amigas y compañeros.
-      <br />
-      <br />
-      Entrando al tema de que quiero estudiar, primero me gustaría reforzar mi
-      inglés en otro país como Canadá o Estados Unidos. Pero el tema de
-      universidad es algo que me tiene aún un poco confundida. Ya que para mi es
-      algo que me debería gustar por completo y algo de lo cual no me arrepieta
-      en algún momento.
-      <br />
-      <br />
-      Pero pensaría en escojer entre ingeniería administrativa y enfocarme en la
-      parte de diseño o mercadeo (aun nose en que universidad).
-      <br />
-      <br />
-      Pero sea la carrera que sea simpre trataría de ayudar en alguna forma a
-      las personas que de verdad lo necesitan, ya que es algo que me fascina
-      hacer y poder de alguna forma contribuirle al mundo.
-      <br />
-      <br />
-      <br />
-      <img id="trabajo" src="imagenes/marke.jpg" width="300" height="250" />
-      <br />
-      <br />
+      awsredtfyguhijnomkkmonjihugtfyrd5es4wedtrfytguhijomjnihgyfd
     </p>
   </body>
-
-  <footer>
-    -Isabella Ortiz Sánchez.
-    <br />
-    <br />
-    - isabella.ortizsanchez@bethlemitasbello.edu.co
-    <br />
-    <br />
-    - 15 años.
-    <br />
-    <br />
-    - Amo integrarme con gente nueva, hacer cosas didácticas y ayudar a las
-    demás personas.
-    <br />
-    <a href="mailto:isabella.ortizsanchez@bethlemitasbello.edu.co">email</a>
-  </footer>
 </html>
