--- a/index.html
+++ b/index.html
@@ -1,39 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style.css" />
-    <title>Imágenes.</title>
+    <title>Sesión 4 Arukay</title>
   </head>
   <body>
-    <h1>=LA NATACIÓN=</h1>
-    <img id="nadis" src="imagenes/nadis.jpg" width="400" height="200" />
-    <br />
-    <br />
+    <h1>=EL LEOPARDO=</h1>
+
+    <img
+      id="leop"
+      src="imagenes/leop.jpg"
+      width="400"
+      height="200"
+      usemap="#image-map"
+    />
     <map name="image-map">
       <area
-        title="#pagina principal"
-        href="https://concepto.de/natacion/"
-        coords="14,14,55,37"
+        title="#principal"
+        href="https://zooguadalajara.com.mx/animales/detalle/193#:~:text=La%20cabeza%2C%20garganta%20y%20el,a%2060%20Kg%20en%20hembras."
+        coords="725,480,0,0"
         shape="rect"
       />
-      <area
-        title="#ramas"
-        href="https://todonatacion.net/ramas-de-la-natacion/"
-        coords="14,14,55,37"
-        shape="circle"
-      />
-    </map>
+      </map>
 
-    <h2>Historia de Barcelona</h2>
-    <p>
-      awsredtfyguhijnomkkmonjihugtfyrd5es4wedtrfytguhijomjnihgyfd
-    </p>
+      <h2>=Descripción del leopardo=</h2>
+      <p>
+        -El leopardo es un mamífero carnívoro de la familia de los félidos.
+        <br />
+        -Habita en distintas regiones del mundo, incluyendo África, Asia y
+        algunas zonas de Oriente Medio.
+        <br />
+        -Es un animal solitario y nocturno, con una dieta variada que incluye
+        desde pequeños mamíferos y aves hasta presas más grandes como antílopes
+        y cebras.
+        <br />
+        -Una de las características distintivas del leopardo es su pelaje, el
+        cual tiene manchas oscuras sobre un fondo claro o amarillento, lo que le
+        ayuda a camuflarse en su hábitat natural.
+        <br />
+        -El leopardo es uno de los grandes felinos más adaptables y puede
+        sobrevivir en hábitats muy variados, desde selvas tropicales hasta zonas
+        desérticas.
+        <br />
+        <br />
+      </p>
+      <img
+        id="pardo"
+        src="imagenes/pardo.jpg"
+        width="400"
+        height="200"
+        usemap="#image-map"
+      />
+      <map name="#image-map">
+        <area
+          href="https://www.nationalgeographic.com.es/felinos/viaje/leopardo_15558"
+          coords="1599,1199,-1,3"
+          shape="rect"
+        />
+      </map>
+      />
+      <br />
+      <br />
+      <br />
+      <br />
+    </map>
   </body>
 </html>
