--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         src="imagenes/pardo.jpg"
         width="400"
         height="200"
-        usemap="#image-map"
+        usemap="#image1-map"
       />
-      <map name="#image-map">
+      <map name="#image1-map">
         <area
           href="https://www.nationalgeographic.com.es/felinos/viaje/leopardo_15558"
           coords="1599,1199,-1,3"
